--- a/package.json
+++ b/package.json
@@ -3,10 +3,12 @@
   "version": "0.0.0",
   "scripts": {
     "dev": "vite",
-    "build": "vue-tsc --noEmit && vite build",
+    "build": "vite build",
+    "build-tsc": "vue-tsc --noEmit && vite build",
     "serve": "vite preview"
   },
   "dependencies": {
+    "element-plus": "^1.0.2-beta.70",
     "vue": "^3.0.5",
     "vue-router": "^4.0.10",
     "vuex": "^4.0.2"
@@ -18,6 +20,7 @@
     "sass": "^1.37.5",
     "typescript": "^4.3.2",
     "vite": "^2.4.4",
+    "vite-plugin-components": "^0.13.2",
     "vue-tsc": "^0.2.2"
   }
 }
